# wireless_doorbell

./: README.md
code/: avr-unknown-gcc.txt  meson.build
code/src/: main_atmega168.cpp  platform.cpp  platform.hpp  si4463.cpp  si4463.hpp  si4463_config.h  uart.cpp  uart.hpp
code/src/utils/: buffer.cpp  buffer.hpp  byte_suffix.cpp  byte_suffix.hpp
gerber/: drahtlos_klingel-B_Cu.gbl  drahtlos_klingel-B_Mask.gbs  drahtlos_klingel-B_Paste.gbp  drahtlos_klingel-B_Silkscreen.gbo  drahtlos_klingel-Edge_Cuts.gm1  drahtlos_klingel-F_Cu.gtl  drahtlos_klingel-F_Mask.gts  drahtlos_klingel-F_Paste.gtp  drahtlos_klingel-F_Silkscreen.gto  drahtlos_klingel-NPTH-drl_map.gbr  drahtlos_klingel-NPTH.drl  drahtlos_klingel-PTH-drl_map.gbr  drahtlos_klingel-PTH.drl
kicad/: .gitignore  drahtlos_klingel.kicad_pcb  drahtlos_klingel.kicad_prl  drahtlos_klingel.kicad_pro  drahtlos_klingel.kicad_sch  microcontroller_and_radio.kicad_sch  power_supply.kicad_sch  rfm26w.kicad_sym
kicad/rfm26w.pretty/: rfm26w.kicad_mod
simulation/: .gitignore  2022_05_13_opamp_schmitt_trigger_lowpass.asc  2022_05_15_door_bell_power_supply.asc  2022_07_30_door_bell_power_supply_2.asc  README.md
